crates/formatter/tests/snapshots/snapshots__migrations__000503_ai_providers_schema_expand.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists idx_chat_model_configs_ai_provider_id;

alter table chat_model_configs drop column if exists ai_provider_id;

create or replace function delete_deleted_user_resources() returns trigger language plpgsql as $$
	declare
	begin
		if (NEW.deleted) then
			-- Remove their api_keys.
			delete from api_keys
			where user_id = OLD.id;

			-- Remove their user_links.
			-- Their login_type is preserved in the users table.
			-- Matching this user back to the link can still be done by their
			-- email if the account is undeleted. Although that is not a guarantee.
			delete from user_links
			where user_id = OLD.id;

			-- Remove their user_secrets.
			-- user_secrets.user_id has ON DELETE CASCADE, but soft-delete
			-- does not remove the users row so the FK cascade never fires.
			delete from user_secrets
			where user_id = OLD.id;

			-- Remove their organization memberships.
			-- This also triggers group membership cleanup via
			-- trigger_delete_group_members_on_org_member_delete.
			delete from organization_members
			where user_id = OLD.id;

			-- Remove their user_skills.
			-- user_skills.user_id has ON DELETE CASCADE, but soft-delete
			-- does not remove the users row so the FK cascade never fires.
			delete from user_skills
			where user_id = OLD.id;
		end if;
		return NEW;
	end;
$$;

drop index if exists idx_user_ai_provider_keys_ai_provider_id;
drop table if exists user_ai_provider_keys;
