crates/formatter/tests/snapshots/snapshots__migrations__000503_ai_providers_schema_expand.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table user_ai_provider_keys (
	id uuid primary key default gen_random_uuid(),
	user_id uuid not null references users (id) on delete cascade,
	ai_provider_id uuid not null references ai_providers (id) on delete cascade,
	api_key text not null check (api_key != ''),
	api_key_key_id text references dbcrypt_keys (active_key_digest),
	created_at timestamp with time zone not null default NOW(),
	updated_at timestamp with time zone not null default NOW(),
	UNIQUE(user_id, ai_provider_id)
);

comment on table user_ai_provider_keys is 'User-owned API keys associated with AI providers. These keys are used only when BYOK is enabled.';

comment on column user_ai_provider_keys.api_key is 'User-owned API key used to authenticate with the upstream AI provider. Encrypted at rest via dbcrypt when api_key_key_id is set.';

comment on column user_ai_provider_keys.api_key_key_id is 'The ID of the key used to encrypt the user-owned provider API key. If this is NULL, the API key is not encrypted.';

create index idx_user_ai_provider_keys_ai_provider_id
on user_ai_provider_keys (ai_provider_id);

-- user_ai_provider_keys.user_id has ON DELETE CASCADE, but user deletion
-- normally soft-deletes the users row, so the FK cascade does not fire.
create or replace function delete_deleted_user_resources()
returns trigger
language plpgsql
as $$
	declare
	begin
		if (NEW.deleted) then
			-- Remove their api_keys.
			delete from api_keys
			where user_id = OLD.id;

			-- Remove their user_links.
			-- Their login_type is preserved in the users table.
			-- Matching this user back to the link can still be done by their
			-- email if the account is undeleted. Although that is not a guarantee.
			delete from user_links
			where user_id = OLD.id;

			-- Remove their user_secrets.
			-- user_secrets.user_id has ON DELETE CASCADE, but soft-delete
			-- does not remove the users row so the FK cascade never fires.
			delete from user_secrets
			where user_id = OLD.id;

			-- Remove their user AI provider keys.
			-- user_ai_provider_keys.user_id has ON DELETE CASCADE, but soft-delete
			-- does not remove the users row so the FK cascade never fires.
			delete from user_ai_provider_keys
			where user_id = OLD.id;

			-- Remove their organization memberships.
			-- This also triggers group membership cleanup via
			-- trigger_delete_group_members_on_org_member_delete.
			delete from organization_members
			where user_id = OLD.id;

			-- Remove their user_skills.
			-- user_skills.user_id has ON DELETE CASCADE, but soft-delete
			-- does not remove the users row so the FK cascade never fires.
			delete from user_skills
			where user_id = OLD.id;
		end if;
		return NEW;
	end;
$$;

alter table chat_model_configs
	add column ai_provider_id uuid references ai_providers (id);

create index idx_chat_model_configs_ai_provider_id
on chat_model_configs (ai_provider_id);
