crates/formatter/tests/snapshots/snapshots__migrations__000506_ai_provider_type_copilot_value.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Add 'copilot' to ai_provider_type. The aibridge runtime already supports
-- Copilot via aibridge.NewCopilotProvider; the enum just needs the
-- discriminator so DB-driven providers can carry it. Mirrors the precedent
-- in 000499_ai_provider_type_chatd_values.up.sql.
alter type ai_provider_type add value if not exists 'copilot';
