crates/formatter/tests/snapshots/snapshots__migrations__000507_boundary_sessions_and_logs.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table boundary_sessions (
	id uuid primary key,
	workspace_agent_id uuid not null references workspace_agents (id),
	confined_process_name text not null,
	started_at timestamptz not null,
	updated_at timestamptz not null
);

comment on table boundary_sessions is 'Boundary session metadata. Each row represents a single invocation of a Boundary process wrapping a confined agent.';
comment on column boundary_sessions.id is 'The unique session ID generated by the Boundary process on startup.';
comment on column boundary_sessions.workspace_agent_id is 'The workspace agent that this Boundary session is associated with.';
comment on column boundary_sessions.confined_process_name is 'Name of the confined process (e.g. claude-code, codex, copilot).';
comment on column boundary_sessions.started_at is 'Time when the first log for this session was received by coderd.';
comment on column boundary_sessions.updated_at is 'Time when the session was last updated.';

create table boundary_logs (
	id uuid not null,
	session_id uuid not null references boundary_sessions (id) on delete cascade,
	sequence_number int not null check (sequence_number >= 0),
	captured_at timestamptz not null,
	created_at timestamptz not null,
	proto text not null default '',
	method text not null default '',
	detail text not null default '',
	matched_rule text,
	primary key (id)
);

comment on table boundary_logs is 'Persisted boundary audit events. Each row is a single audit event processed by a Boundary proxy.';
comment on column boundary_logs.session_id is 'The session ID generated by the Boundary process on startup. Groups all events from one invocation.';
comment on column boundary_logs.sequence_number is 'Monotonically increasing integer assigned by Boundary, starting at 0 per session. Primary ordering key when Boundary is in use.';
comment on column boundary_logs.captured_at is 'When the log was sent to the DB.';
comment on column boundary_logs.created_at is 'When the event happened on the workspace.';
comment on column boundary_logs.proto is 'The protocol of the audited action. e.g. http, dns, git, fs.';
comment on column boundary_logs.method is 'The operation within the protocol. e.g. GET/POST for http, clone for git, A for dns, read/write for fs.';
comment on column boundary_logs.detail is 'Protocol-specific detail. e.g. the full URL for http, the hostname for dns, the path for fs.';
comment on column boundary_logs.matched_rule is 'The allow-list rule that matched. NULL when the request was denied; non-NULL implies the request was allowed.';

-- Ordering query path: list events for a session, sorted by sequence number.
create index idx_boundary_logs_session_seq
on boundary_logs (session_id, sequence_number);
-- Retention purge path: delete old rows by capture time.
create index idx_boundary_logs_captured_at on boundary_logs (captured_at);
