crates/formatter/tests/snapshots/snapshots__migrations__000509_user_secrets_limits.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop trigger if exists trigger_user_secrets_per_user_limits on user_secrets;
drop function IF exists enforce_user_secrets_per_user_limits ();
